\name{NEWS}
\title{NEWS for SeqVarTools}
\section{Changes in version 1.5.1}{
  \itemize{
    \item Use existing isSNV generic from VariantAnnotation instead of redefining
    \item Use BiocStyle for vignette
  }
}
\section{Changes in version 1.7.3}{
  \itemize{
    \item Add methods for duplicateDiscordance with two datasets
    \item Add alternateAlleleDetection
  }
}
\section{Changes in version 1.7.4}{
  \itemize{
    \item HWE works on biallelic INDELs as well as SNVs
  }
}
\section{Changes in version 1.7.5}{
  \itemize{
    \item Added SeqVarData class to combine sample annotation with GDS object
  }
}
\section{Changes in version 1.7.6}{
  \itemize{
    \item HWE method returns additional columns and allows permutation of genotypes
  }
}
\section{Changes in version 1.7.7}{
  \itemize{
    \item added methods to calculate and plot reference allele fraction
  }
}
\section{Changes in version 1.7.9}{
  \itemize{
    \item added more options to return dosage of different alleles
  }
}
\section{Changes in version 1.9.2}{
  \itemize{
    \item added by.variant option to duplicateDiscordance for two gds files
  }
}
\section{Changes in version 1.9.4}{
  \itemize{
    \item alleleDosage returns list with dosage of each allele separately
  }
}
\section{Changes in version 1.9.8}{
  \itemize{
    \item duplicateDiscordance and alternateAlleleDetection require SeqVarData objects; both can match on a subject.id instead of sample.id
  }
}
\section{Changes in version 1.9.9}{
  \itemize{
    \item duplicateDiscordance across two GDS files can match on either position or position and alleles, with the ability to recode genotypes if th reference allele in one dataset is the alternate allele in the other dataset
  }
}
\section{Changes in version 1.9.10}{
  \itemize{
    \item duplicateDiscordance across two GDS files can calculate discordance based on heterozygote/homozygote status instead of genotype
  }
}