@@ -6,7 +6,7 @@
         W <- as.numeric(t(Est) %*% solve(cov) %*% Est)
     }
     pval <- pchisq(W, df=length(Est), lower.tail=FALSE)
-    c(Wald.Stat=W, Wald.pval=pval)
+    c(W, pval)
 }
 
 .runRegression <- function(model.string, model.data, model.type) {
@@ -20,15 +20,52 @@
     
         Est <- unname(coef(mod)["genotype"])
         cov <- vcov(mod)["genotype","genotype"]
-        ret <- c(Est=Est, SE=sqrt(cov), .waldTest(Est, cov))
+        
+        c(Est, sqrt(cov), .waldTest(Est, cov))
+    }, warning=function(w) rep(NA, 4), error=function(e) rep(NA, 4))
+}
 
-    }, warning=function(w) NA, error=function(e) NA)
+.runFirth <- function(model.string, model.data, geno.index=NULL) {
+    model.formula <- as.formula(model.string)
+    tryCatch({
+        mod <- logistf(model.formula, data=model.data, 
+                       plconf=geno.index, dataout=FALSE)
+        ind <- which(mod$terms == "genotype")
+        stopifnot(ind == geno.index)
+        Est <- unname(coef(mod)[ind])
+        cov <- vcov(mod)[ind,ind]
+        pval <- unname(mod$prob[ind])
+        Stat <- qchisq(pval, df=1, lower.tail=FALSE)
+        
+        c(Est, sqrt(cov), Stat, pval)
+    }, warning=function(w) rep(NA, 4), error=function(e) rep(NA, 4))
+}
+
+.outputNames <- function(model.type) {
+    switch(model.type,
+           linear=c("Est", "SE", "Wald.Stat", "Wald.Pval"),
+           logistic=c("Est", "SE", "Wald.Stat", "Wald.Pval"),
+           firth=c("Est", "SE", "PPL.Stat", "PPL.Pval"))
+}
+    
+.freqByOutcome <- function(model.data, model.type, outcome) {
+    if (model.type %in% c("logistic", "firth")) {
+        c0 <- model.data[[outcome]] == 0
+        c1 <- model.data[[outcome]] == 1
+        c(n0=sum(!is.na(model.data[["genotype"]][c0])),
+          n1=sum(!is.na(model.data[["genotype"]][c1])),
+          freq0=0.5*mean(model.data[["genotype"]][c0], na.rm=TRUE),
+          freq1=0.5*mean(model.data[["genotype"]][c1], na.rm=TRUE))
+    } else {
+        c(n=sum(!is.na(model.data[["genotype"]])),
+          freq=0.5*mean(model.data[["genotype"]], na.rm=TRUE))
+    }
 }
 
 setMethod("regression",
           "SeqVarData",
           function(gdsobj, outcome, covar=NULL,
-                   model.type=c("linear", "logistic")) {
+                   model.type=c("linear", "logistic", "firth")) {
               model.type <- match.arg(model.type)
               
               ## get covariates
@@ -37,11 +74,30 @@ setMethod("regression",
               ## create model formula
               model.string <- paste(outcome, "~", paste(c(covar, "genotype"), collapse=" + "))
               
+              ## for firth test - determine index of genotype in model matrix
+              if (model.type == "firth") {
+                  tmp <- cbind(dat, "genotype"=0)
+                  geno.index <- which(colnames(model.matrix(as.formula(model.string), tmp)) == "genotype")
+                  rm(tmp)
+              }
+
               ## apply function over variants
               res <- seqApply(gdsobj, "genotype", function(x) {
                   ## assume we want effect of reference allele
                   model.data <- cbind(dat, genotype=colSums(x == 0))
-                  .runRegression(model.string, model.data, model.type)
+                  
+                  ## don't bother with monomorphic variants
+                  freq <- .freqByOutcome(model.data, model.type, outcome)
+                  if (any(freq[c("freq", "freq0", "freq1")] %in% c(0,1))) {
+                      reg <- rep(NA, 4)
+                  } else {
+                      if (model.type %in% c("linear", "logistic")) {
+                          reg <- .runRegression(model.string, model.data, model.type)
+                      } else if (model.type == "firth") {
+                          reg <- .runFirth(model.string, model.data, geno.index)
+                      }
+                  }
+                  c(freq, setNames(reg, .outputNames(model.type)))
               }, margin="by.variant", as.is="list")
               res <- do.call(rbind, res)
               data.frame(variant.id=seqGetData(gdsobj, "variant.id"), res,
